[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "vigenere"
version = "1.0.0"
description = "Vigenere cipher encrypt/decrypt"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [{name = "raccoonette"}]

[project.urls]
Homepage = "https://github.com/raccoonette/vigenere"
